--- a/app/src/main/res/layout-sw600dp/activity_main.xml
+++ b/app/src/main/res/layout-sw600dp/activity_main.xml
@@ -5,7 +5,8 @@
         xmlns:app="http://schemas.android.com/apk/res-auto"
         android:layout_width="match_parent"
         android:layout_gravity="center_vertical"
-        android:layout_height="200dp">
+        android:layout_height="200dp"
+    android:background="@color/light_yellow">
 
         <TextView
             android:gravity="center"
@@ -26,6 +27,7 @@
             android:id="@+id/btnRegister"
             android:textSize="20sp"
             android:text="Register"
+            android:backgroundTint="@color/bee_launcher_background"
             app:layout_constraintTop_toTopOf="@+id/tvTitle"
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintLeft_toLeftOf="parent"
@@ -37,6 +39,7 @@
             android:layout_height="wrap_content"
             android:id="@+id/btnLogin"
             android:textSize="17sp"
+            android:backgroundTint="@color/bee_launcher_background"
             android:text="Login"
             app:layout_constraintTop_toBottomOf="@id/btnRegister"
             app:layout_constraintRight_toRightOf="parent"
