--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -5,7 +5,8 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_gravity="center_vertical"
-    android:layout_height="350dp">
+    android:layout_height="350dp"
+    android:background="@color/light_yellow">
 
     <TextView
         android:gravity="center"
@@ -95,6 +96,7 @@
         android:paddingLeft="20dp"
         android:paddingRight="20dp"
         android:text="@string/button_login"
+        android:backgroundTint="@color/bee_launcher_background"
         android:textSize="20sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
